--- a/index.html
+++ b/index.html
@@ -35,29 +35,37 @@
             </div>
         </section>
         <section id="about">
-            <h1 id="about-h1">O que é o SIOS?</h1>
-            <p id="about-p">O SIOS foi desenvolvido com o intuito de facilitar o trabalho da empresa, oferecendo funções completas para a administração da sua operação!!</p>
-            <a href="" class="about-a" id="about-a-look">Dê uma olhada!</a>
-            <a href="" class="about-a" id="about-a-buy">Compre agora!</a>
-            <img id="about-img" src="" alt="">
+            <div id="about-txt">
+                <h1 id="about-h1">O que é o SIOS?</h1>
+                <p id="about-p">O SIOS foi desenvolvido com o intuito de facilitar o trabalho da empresa, oferecendo funções completas para a administração da sua operação!!</p>
+                <button href="" class="about-btn" id="about-a-look">Dê uma olhada!</button>
+                <button href="" class="about-btn" id="about-a-buy">Compre agora!</button>
+            </div>
+            <div id="about-img">
+                <img id="about-img-img" src="img/prints/1-login.png" alt="">
+            </div>
         </section>
         <section id="features">
             <h1 id="features-h1">Características</h1>
-            <div id="features-div-" class="features-div">
-                <img src="" alt="" class="features-div--img">
-                <h1 class="features-div--h1"></h1>
-                <p class="features-div--p"></p>
-            </div>
-            <div id="features-div-" class="features-div">
-                <img src="" alt="" class="features-div--img">
-                <h1></h1>
-                <p class="features-div--p"></p>
-            </div>
-            <div id="features-div-" class="features-div">
-                <img src="" alt="" class="features-div--img">
-                <h1></h1>
-                <p class="features-div--p"></p>
-            </div>
+            <section id="features-description">
+                <div id="features-div-" class="features-div">
+                    <img src="" alt="" class="features-div--img">
+                    <h1 class="features-div--h1">Funções Analíticas</h1>
+                    <p class="features-div--p">A implementação das soluções de dados e funções analíticas da SIOS oferece às organizações uma arquitetura em nuvem moderna e aberta que aproveita ao máximo o valor dos dados da SIOS e de terceiros.</p>
+                </div>
+                <div id="features-div-" class="features-div">
+                    <img src="" alt="" class="features-div--img">
+                    <h1>Gestão de dados</h1>
+                    <p class="features-div--p">
+                        Com acesso controlado a uma única versão da verdade, capacite os usuários a analisar e agir com base em informações essenciais para os negócios.
+                    </p>
+                </div>
+                <div id="features-div-" class="features-div">
+                    <img src="" alt="" class="features-div--img">
+                    <h1>Finanças</h1>
+                    <p class="features-div--p">Como seu departamento financeiro pode aumentar a receita, controlar custos e minimizar riscos? Coloque o software de gestão financeira em ação.</p>
+                </div>
+            </section>
         </section>
         <section id="opinions">
             <h1 id="opinions-h1">O que falam de nós</h1>
