--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <button href="" class="about-btn" id="about-a-buy">Compre agora!</button>
             </div>
             <div id="about-img">
-                <img id="about-img-img" src="img/prints/1-login.png" alt="">
+                <img id="about-img-img" src="img/prints/1-login.png" alt="Imagem do sistema">
             </div>
         </section>
         <section id="features">
