--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>SIOS</title>
 </head>
 <body>
+    <!--TEMPLATE: https://preview.webflow.com/preview/simple-template-v2?preview=f6f64fb129da9adafb7c380ce4118cb4 -->
     <header>
         <a href="index.html" id="header-logo" class="logo">
             <img src="img/uj-transportes.png" alt="UJ Transportes Logo">
@@ -48,21 +49,21 @@
         <section id="features">
             <h1 id="features-h1">Características</h1>
             <section id="features-description">
-                <div id="features-div-" class="features-div">
+                <div id="features-desciption-div" class="features-description-divall">
                     <img src="" alt="" class="features-div--img">
-                    <h1 class="features-div--h1">Funções Analíticas</h1>
+                    <h1 class="features-description-divall-h1">Funções Analíticas</h1>
                     <p class="features-div--p">A implementação das soluções de dados e funções analíticas da SIOS oferece às organizações uma arquitetura em nuvem moderna e aberta que aproveita ao máximo o valor dos dados da SIOS e de terceiros.</p>
                 </div>
-                <div id="features-div-" class="features-div">
+                <div id="features-desciption-div" class="features-description-divall">
                     <img src="" alt="" class="features-div--img">
-                    <h1>Gestão de dados</h1>
+                    <h1 class="features-description-divall-h1">Gestão de dados</h1>
                     <p class="features-div--p">
                         Com acesso controlado a uma única versão da verdade, capacite os usuários a analisar e agir com base em informações essenciais para os negócios.
                     </p>
                 </div>
-                <div id="features-div-" class="features-div">
+                <div id="features-desciption-div" class="features-description-divall">
                     <img src="" alt="" class="features-div--img">
-                    <h1>Finanças</h1>
+                    <h1 class="features-description-divall-h1">Finanças</h1>
                     <p class="features-div--p">Como seu departamento financeiro pode aumentar a receita, controlar custos e minimizar riscos? Coloque o software de gestão financeira em ação.</p>
                 </div>
             </section>
@@ -70,19 +71,29 @@
         <section id="opinions">
             <h1 id="opinions-h1">O que falam de nós</h1>
             <div id="opinions-div">
-                <p id="opinions-div-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti harum minima commodi, voluptatum corrupti recusandae. Obcaecati possimus eius eum nobis excepturi rerum ab pariatur, sapiente culpa commodi, quibusdam ea sed?</p>
-                <p id="opinions-div-name">Arnold Shwaznagger</p>
-                <a href="" id="opinions-div-left">
-                    <button>
-                        <img src="" alt="Left">
-                    </button>
-                </a>
-                <a href=""  id="opinions-div-right">
-                    <button>
-                        <img src="" alt="Right">
-                    </button>
-                </a>
+                <div class="opinion0">
+                    <p id="opinions-div-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti harum minima commodi, voluptatum corrupti recusandae. Obcaecati possimus eius eum nobis excepturi rerum ab pariatur, sapiente culpa commodi, quibusdam ea sed?</p>
+                    <p id="opinions-div-name">Arnold Shwaznagger</p>
+                </div>
+                <div class="opinion1">
+                    <p id="opinions-div-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti harum minima commodi, voluptatum corrupti recusandae. Obcaecati possimus eius eum nobis excepturi rerum ab pariatur, sapiente culpa commodi, quibusdam ea sed?</p>
+                    <p id="opinions-div-name">Arnold Shwaznagger</p>
+                </div>
+                <div class="opinion2">
+                    <p id="opinions-div-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti harum minima commodi, voluptatum corrupti recusandae. Obcaecati possimus eius eum nobis excepturi rerum ab pariatur, sapiente culpa commodi, quibusdam ea sed?</p>
+                    <p id="opinions-div-name">Arnold Shwaznagger</p>
+                </div>
+                <div class="opinion3">
+                    <p id="opinions-div-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti harum minima commodi, voluptatum corrupti recusandae. Obcaecati possimus eius eum nobis excepturi rerum ab pariatur, sapiente culpa commodi, quibusdam ea sed?</p>
+                    <p id="opinions-div-name">Arnold Shwaznagger</p>
+                </div>
             </div>
+            <button id="opinions-btn-left" class="opinions-btn">
+                <img src="" alt="Left">
+            </button>
+            <button id="opinions-btn-right" class="opinions-btn">
+                <img src="" alt="Right">
+            </button>
         </section>
     </main>
     
@@ -90,6 +101,40 @@
         <a href="index.html" id="footer-logo" class="logo">
             <img src="img/uj-transportes.png" alt="">
         </a>
+        <section id="footer-links">
+            <ul id="footer-links-suporte">
+                <h1 class="footer-links-item-title">Suporte</h1>
+                <a href="#">
+                    <li>Produtos e Manuais</li>
+                </a>
+                <a href="#">
+                    <li>Soluções Técnicas e dicas</li>
+                </a>
+                <a href="#">
+                    <li>Reparo</li>
+                </a>
+                <a href="#">
+                    <li>Fale Conosco</li>
+                </a>
+            </ul>
+            <ul id="footer-links-sobre">
+                <h1 class="footer-links-item-title">Sobre</h1>
+                <a href="#">
+                    <li>Sobre Nós</li>
+                </a>
+                <a href="#">
+                    <li>Termos de uso</li>
+                </a>
+                <a href="#">
+                    <li>Política de Privacidade</li>
+                </a>
+            </ul>
+        </section>
+        <!-- <section id="footer-redes">
+            <h1 id="footer-redes-h1">Siga-nos nas redes sociais!!</h1>
+            <a href="https://instagram.co/marcos-henri" target="_blank" id="footer-redes-insta"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://github.com/marcos-henri" target="_blank"><i class="fa-brands fa-github"></i></a>
+        </section> -->
     </footer>
 </body>
 </html>
