alguns updates de responsividade

--- a/index.html
+++ b/index.html
@@ -88,12 +88,14 @@
                     <p id="opinions-div-name">Arnold Shwaznagger</p>
                 </div>
             </div>
-            <button id="opinions-btn-left" class="opinions-btn">
-                <img src="" alt="Left">
-            </button>
-            <button id="opinions-btn-right" class="opinions-btn">
-                <img src="" alt="Right">
-            </button>
+            <div id="opinions-btns">
+                <button id="opinions-btn-left" class="opinions-btn">
+                    <img src="" alt="Left">
+                </button>
+                <button id="opinions-btn-right" class="opinions-btn">
+                    <img src="" alt="Right">
+                </button>
+            </div>
         </section>
     </main>
     
