--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>SIOS</title>
 </head>
 <body>
@@ -68,35 +69,31 @@
                 </div>
             </section>
         </section>
-        <section id="opinions">
-            <h1 id="opinions-h1">O que falam de nós</h1>
-            <div id="opinions-div">
-                <div class="opinion0">
-                    <p id="opinions-div-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti harum minima commodi, voluptatum corrupti recusandae. Obcaecati possimus eius eum nobis excepturi rerum ab pariatur, sapiente culpa commodi, quibusdam ea sed?</p>
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <h1 id="carousel-title">O que falam de nós!</h1>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <p id="opinions-div-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti harum minima commodi, voluptatum corrupti recusandae. Obcaecati possimus eius eum nobis excepturi rerum ab pariatur, sapiente culpa commodi, quibusdam ea sed?</p>
+                <p id="opinions-div-name">Arnold Shwaznagger</p>
+              </div>
+              <div class="carousel-item">
+                <p id="opinions-div-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti harum minima commodi, voluptatum corrupti recusandae. Obcaecati possimus eius eum nobis excepturi rerum ab pariatur, sapiente culpa commodi, quibusdam ea sed?</p>
                     <p id="opinions-div-name">Arnold Shwaznagger</p>
-                </div>
-                <div class="opinion1">
-                    <p id="opinions-div-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti harum minima commodi, voluptatum corrupti recusandae. Obcaecati possimus eius eum nobis excepturi rerum ab pariatur, sapiente culpa commodi, quibusdam ea sed?</p>
+              </div>
+              <div class="carousel-item">
+                <p id="opinions-div-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti harum minima commodi, voluptatum corrupti recusandae. Obcaecati possimus eius eum nobis excepturi rerum ab pariatur, sapiente culpa commodi, quibusdam ea sed?</p>
                     <p id="opinions-div-name">Arnold Shwaznagger</p>
-                </div>
-                <div class="opinion2">
-                    <p id="opinions-div-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti harum minima commodi, voluptatum corrupti recusandae. Obcaecati possimus eius eum nobis excepturi rerum ab pariatur, sapiente culpa commodi, quibusdam ea sed?</p>
-                    <p id="opinions-div-name">Arnold Shwaznagger</p>
-                </div>
-                <div class="opinion3">
-                    <p id="opinions-div-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti harum minima commodi, voluptatum corrupti recusandae. Obcaecati possimus eius eum nobis excepturi rerum ab pariatur, sapiente culpa commodi, quibusdam ea sed?</p>
-                    <p id="opinions-div-name">Arnold Shwaznagger</p>
-                </div>
+              </div>
             </div>
-            <div id="opinions-btns">
-                <button id="opinions-btn-left" class="opinions-btn">
-                    <img src="" alt="Left">
-                </button>
-                <button id="opinions-btn-right" class="opinions-btn">
-                    <img src="" alt="Right">
-                </button>
-            </div>
-        </section>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
     </main>
     
     <footer>
@@ -138,5 +135,8 @@
             <a href="https://github.com/marcos-henri" target="_blank"><i class="fa-brands fa-github"></i></a>
         </section> -->
     </footer>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
