Melhorias no código

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <!--TEMPLATE: https://preview.webflow.com/preview/simple-template-v2?preview=f6f64fb129da9adafb7c380ce4118cb4 -->
     <header>
-        <a href="index.html" id="header-logo" class="logo">
-            <img src="img/uj-transportes.png" alt="UJ Transportes Logo">
-        </a>
+        <div id="header-logo" class="logo">
+            <img src="img/logo.png" alt="SIOS Logo" id="header-logo-img">
+        </div>
         <nav id="header-nav">
             <a href="" id="header-nav-home" class="header-nav-a">Home</a>
             <a href="" id="header-nav-sobre" class="header-nav-a">Sobre</a>
@@ -73,16 +73,16 @@
             <h1 id="carousel-title">O que falam de nós!</h1>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <p id="opinions-div-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti harum minima commodi, voluptatum corrupti recusandae. Obcaecati possimus eius eum nobis excepturi rerum ab pariatur, sapiente culpa commodi, quibusdam ea sed?</p>
+                <p id="opinions-div-text">Este produto é simplesmente incrível. Fiquei impressionado com a qualidade e a atenção aos detalhes. A funcionalidade e o desempenho superaram todas as minhas expectativas, tornando-o uma excelente escolha para quem busca um produto de alta qualidade.</p>
                 <p id="opinions-div-name">Arnold Shwaznagger</p>
               </div>
               <div class="carousel-item">
-                <p id="opinions-div-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti harum minima commodi, voluptatum corrupti recusandae. Obcaecati possimus eius eum nobis excepturi rerum ab pariatur, sapiente culpa commodi, quibusdam ea sed?</p>
-                    <p id="opinions-div-name">Arnold Shwaznagger</p>
+                <p id="opinions-div-text">Eu fiquei absolutamente encantado com este produto. Ele oferece um nível de desempenho incrível, combinado com uma estética elegante e moderna. A qualidade do material é evidente, com uma construção robusta e durável. Além disso, o suporte ao cliente foi excepcional, oferecendo uma experiência de compra completa e satisfatória.</p>
+                    <p id="opinions-div-name">Silvester Stalone</p>
               </div>
               <div class="carousel-item">
-                <p id="opinions-div-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti harum minima commodi, voluptatum corrupti recusandae. Obcaecati possimus eius eum nobis excepturi rerum ab pariatur, sapiente culpa commodi, quibusdam ea sed?</p>
-                    <p id="opinions-div-name">Arnold Shwaznagger</p>
+                    <p id="opinions-div-text">Se você procura um produto que ofereça um excelente desempenho e uma ótima relação custo-benefício, este é o produto perfeito para você. Desde o momento em que eu comecei a usá-lo na minha empresa, eu percebi que este produto foi bem projetado. A sua funcionalidade é incrível, e eu apreciei especialmente a facilidade de uso. Estou muito feliz com a minha compra e recomendaria este produto para qualquer pessoa.</p>
+                    <p id="opinions-div-name">Roman Pearce</p>
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
