--- a/index.html
+++ b/index.html
@@ -36,39 +36,6 @@
                 <a href="" id="welcome-a">Veja mais!</a>
             </div>
         </section>
-        <section id="about">
-            <div id="about-txt">
-                <h1 id="about-h1">O que é o SIOS?</h1>
-                <p id="about-p">O SIOS foi desenvolvido com o intuito de facilitar o trabalho da empresa, oferecendo funções completas para a administração da sua operação!!</p>
-                <button href="" class="about-btn" id="about-a-look">Dê uma olhada!</button>
-                <button href="" class="about-btn" id="about-a-buy">Compre agora!</button>
-            </div>
-            <div id="about-img">
-                <img id="about-img-img" src="img/prints/1-login.png" alt="Imagem do sistema">
-            </div>
-        </section>
-        <section id="features">
-            <h1 id="features-h1">Características</h1>
-            <section id="features-description">
-                <div id="features-desciption-div" class="features-description-divall">
-                    <img src="" alt="" class="features-div--img">
-                    <h1 class="features-description-divall-h1">Funções Analíticas</h1>
-                    <p class="features-div--p">A implementação das soluções de dados e funções analíticas da SIOS oferece às organizações uma arquitetura em nuvem moderna e aberta que aproveita ao máximo o valor dos dados da SIOS e de terceiros.</p>
-                </div>
-                <div id="features-desciption-div" class="features-description-divall">
-                    <img src="" alt="" class="features-div--img">
-                    <h1 class="features-description-divall-h1">Gestão de dados</h1>
-                    <p class="features-div--p">
-                        Com acesso controlado a uma única versão da verdade, capacite os usuários a analisar e agir com base em informações essenciais para os negócios.
-                    </p>
-                </div>
-                <div id="features-desciption-div" class="features-description-divall">
-                    <img src="" alt="" class="features-div--img">
-                    <h1 class="features-description-divall-h1">Finanças</h1>
-                    <p class="features-div--p">Como seu departamento financeiro pode aumentar a receita, controlar custos e minimizar riscos? Coloque o software de gestão financeira em ação.</p>
-                </div>
-            </section>
-        </section>
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <h1 id="carousel-title">O que falam de nós!</h1>
             <div class="carousel-inner">
@@ -93,7 +60,43 @@
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="sr-only">Next</span>
             </a>
-          </div>
+        </div>
+        <section id="about">
+            <div id="about-txt">
+                <h1 id="about-h1">O que é o SIOS?</h1>
+                <p id="about-p">O SIOS foi desenvolvido com o intuito de facilitar o trabalho da empresa, oferecendo funções completas para a administração da sua operação!!</p>
+                <button href="" class="about-btn" id="about-a-look">Dê uma olhada!</button>
+                <button href="" class="about-btn" id="about-a-buy">Compre agora!</button>
+            </div>
+            <div id="about-img">
+                <img id="about-img-img" src="img/prints/1-login.png" alt="Imagem do sistema">
+            </div>
+        </section>
+        <div id="video">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/zyxprP1pcpw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <section id="features">
+            <h1 id="features-h1">Características</h1>
+            <section id="features-description">
+                <div id="features-desciption-div" class="features-description-divall">
+                    <img src="" alt="" class="features-div--img">
+                    <h1 class="features-description-divall-h1">Funções Analíticas</h1>
+                    <p class="features-div--p">A implementação das soluções de dados e funções analíticas da SIOS oferece às organizações uma arquitetura em nuvem moderna e aberta que aproveita ao máximo o valor dos dados da SIOS e de terceiros.</p>
+                </div>
+                <div id="features-desciption-div" class="features-description-divall">
+                    <img src="" alt="" class="features-div--img">
+                    <h1 class="features-description-divall-h1">Gestão de dados</h1>
+                    <p class="features-div--p">
+                        Com acesso controlado a uma única versão da verdade, capacite os usuários a analisar e agir com base em informações essenciais para os negócios.
+                    </p>
+                </div>
+                <div id="features-desciption-div" class="features-description-divall">
+                    <img src="" alt="" class="features-div--img">
+                    <h1 class="features-description-divall-h1">Finanças</h1>
+                    <p class="features-div--p">Como seu departamento financeiro pode aumentar a receita, controlar custos e minimizar riscos? Coloque o software de gestão financeira em ação.</p>
+                </div>
+            </section>
+        </section>
     </main>
     
     <footer>
